# uns-obj-pose3d

./: .dockerignore  .gitignore  .gitmodules  BUGFIXES.md  README.md  pyproject.toml
config/: co3d_aligned_nemo.yaml  co3d_aligned_regression.yaml  co3d_nemo.yaml  co3d_nemo_align3d.yaml  co3d_nemo_incremental.yaml  co3d_nemo_multiview.yaml  co3d_regression.yaml  co3d_zsp_align3d.yaml  defaults.yaml  monolmb_nemo.yaml  pascal3d_nemo.yaml  pascal3d_regression.yaml
config/credentials/: default-template.yaml
config/datasets/: co3d.yaml  co3d_no_zsp.yaml  co3d_no_zsp_1s_labeled_ref.yaml  co3d_no_zsp_50s_aligned.yaml  co3d_no_zsp_50s_unlabeled.yaml  co3d_no_zsp_5s_labeled_ref.yaml  co3d_no_zsp_5s_labeled_ref_cuboid.yaml  co3d_no_zsp_5s_unlabeled_ref.yaml  co3d_no_zsp_aligned_visual.yaml  co3d_no_zsp_r0.yaml  co3d_no_zsp_r1.yaml  co3d_no_zsp_r2.yaml  co3d_no_zsp_r3.yaml  co3d_no_zsp_r4.yaml  co3dv1_zsp_10s.yaml  coco.yaml  coco_train.yaml  coco_val.yaml  dtd.yaml  imagenet.yaml  keypoints.yaml  monolmb.yaml  monolmb_test.yaml  monolmb_train.yaml  mvimgnet.yaml  objectnet3d.yaml  objectnet3d_debug.yaml  objectnet3d_test.yaml  objectnet3d_val.yaml  objectron.yaml  omniobject3d.yaml  ood_cv.yaml  pascal3d.yaml  pascal3d_debug.yaml  pascal3d_occ.yaml  pascal3d_test.yaml  pascal3d_train.yaml  pascal3d_val.yaml  shapenetv2.yaml  synthetic_shapenet.yaml
config/logger/: wandb.yaml
config/methods/: nemo.yaml  nemo_align3d.yaml  nemo_incremental.yaml  nemo_multiview.yaml  regression.yaml  (+1 more)
docker/: README.md
setup/: shuri.sh
tests/: test_mesh_geodesic.py  test_select.py
(+12228 files in other folders)
